# vektor

./: LICENSE  README.md
.vektor_bringup/diffdrive_serial/: CMakeLists.txt  diffdrive_serial.xml  package.xml
.vektor_bringup/diffdrive_serial/include/diffdrive_serial/: diffdrive.hpp  visibility_control.h
.vektor_bringup/diffdrive_serial/src/: diffdrive.cpp
.vektor_perception/vektor_hearing/: CMakeLists.txt  package.xml
.vektor_perception/vektor_hearing/scripts/: vision_node.py
.vektor_perception/vektor_sight/: CMakeLists.txt  package.xml
.vektor_perception/vektor_sight/src/: vision.cpp
.vektor_sense/vektor_ear/: CMakeLists.txt  package.xml
.vektor_sense/vektor_ear/src/: hearing_node.cpp
.vektor_sense/vektor_vision/: CMakeLists.txt  package.xml
.vektor_sense/vektor_vision/config/: vision.yaml
.vektor_sense/vektor_vision/launch/: vision.launch.py
.vektor_sense/vektor_vision/scripts/: vision_node.py
vektor_bringup/: CMakeLists.txt  package.xml
vektor_bringup/launch/: rsp.launch.py  rviz.launch.py
vektor_bringup/rviz/: nav2.rviz  vektor.rviz
vektor_control/: CMakeLists.txt  package.xml
vektor_control/config/: vektor_controllers.yaml
vektor_control/launch/: controller.launch.py
vektor_control/urdf/: diff_drive_ros2_control.xacro
vektor_controllers/: CMakeLists.txt  package.xml
vektor_description/: CMakeLists.txt  package.xml
vektor_description/controllers/: diff_drive_controller_velocity.yaml
vektor_description/launch/: rsp.launch.py  rviz.launch.py
vektor_description/rviz/: robot_state.rviz  rsp.rviz  vektor.rviz  vektor_footprint.rviz
vektor_description/urdf/: vektor.urdf  vektor.xacro
vektor_description/urdf/libs/: blueprint.xacro  inertial.xacro  material.xacro
vektor_description/urdf/plugins/: ros2_control_plugin.xacro
vektor_description/urdf/ros2_control/: ahrs_ros2_control.xacro  arduino.xacro  diff_drive_ros2_control.xacro
vektor_description/urdf/sensors/: ahrs_sensor.xacro  lidar.xacro  lidar_sensor.xacro  rgbd_camera.xacro  rgbd_camera_sensor.xacro  sensors.xacro
vektor_description/urdf/structures/: assembly.xacro  base_component.xacro  caster.xacro  inertial_macro.xacro  materials.xacro  wheel.urdf  wheel.xacro  wheel_component.xacro
vektor_navigation/: CMakeLists.txt  package.xml
vektor_navigation/config/: mapper_params_online_async.yaml
vektor_navigation/maps/: map_save.pgm  map_save.yaml
vektor_pkg/: package.xml  setup.cfg  setup.py
vektor_pkg/config/: config.ign.config  vektor_camera.rviz  vektor_depth.rviz  vektor_drive.rviz  vektor_lidar.rviz  vektor_view.rviz
vektor_pkg/config/rviz/: vektor_ign.rviz  vektor_rsp.rviz
vektor_pkg/description/: camera.xacro  components.xacro  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  materials.xacro  plugins.xacro  rgbd_camera.xacro  vektor.xacro  vektor_core.xacro
vektor_pkg/launch/: bridge.launch.py  ign.launch.py  ign_rsp.launch.py  ignition.launch.py  joy.launch.py  new.launch.py  rsp.launch.py  rviz.launch.py  spawn.launch.py  vektor_sim.launch.py
vektor_pkg/vektor_pkg/: vektor_node.py
vektor_pkg/worlds/: base_world.sdf  house.world
vektor_simulation/: CMakeLists.txt  package.xml
vektor_simulation/config/: simulation.config
vektor_simulation/launch/: bridge.launch.py  controllers.launch.py  simulation.launch.py  spawn.launch.py
vektor_simulation/plugins/: diff_drive_plugin.xacro  joint_state_publisher_plugin.xacro  ros2_control_plugin.xacro  sensors_plugin.xacro
vektor_teleoperation/: CMakeLists.txt
vektor_teleoperation/launch/: teleop_joy.launch.py  teleoperation.launch.py
vektor_teleoperation/src/: teleop_node.cpp
vektor_world/: CMakeLists.txt  package.xml
vektor_world/worlds/: base_world.sdf  d3_world.sdf  garden.sdf  house.sdf
(+2 files in other folders)
