cmake_minimum_required(VERSION 3.8)
project(diffdrive_serial)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(ament_cmake_ros REQUIRED)
# find_package(rclcpp REQUIRED)
# find_package(rclcpp_lifecycle REQUIRED)
# find_package(pluginlib REQUIRED)
# find_package(hardware_interface REQUIRED)

set(dependencies
  hardware_interface
  pluginlib
  rclcpp
  rclcpp_lifecycle
)

foreach(dependency IN ITEMS ${dependencies})
  find_package(${dependency} REQUIRED)
endforeach()

add_library(diffdrive SHARED src/diffdrive.cpp)
target_compile_features(diffdrive PUBLIC c_std_17 cxx_std_20)  # Require C99 and C++17
target_include_directories(diffdrive PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
ament_target_dependencies(diffdrive PUBLIC
  ${dependencies}
)

# Causes the visibility macros to use dllexport rather than dllimport,
# which is appropriate when building the dll but not consuming it.
target_compile_definitions(diffdrive PRIVATE "DIFFDRIVE_SERIAL_BUILDING_LIBRARY")

pluginlib_export_plugin_description_file(hardware_interface diffdrive_serial.xml)

install(
  DIRECTORY include/
  DESTINATION include
)
install(
  TARGETS diffdrive
  EXPORT export_${PROJECT_NAME}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_export_include_directories(
  include
)
ament_export_dependencies(
  ${dependencies}
)
ament_export_targets(
  export_${PROJECT_NAME} HAS_LIBRARY_TARGET
)

ament_package()
